--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <p><i class="fa-solid fa-location-dot"></i>Jl. Sayyid Arif, Segoropuro Village, Rejoso, Pasuruan Regency, East Java, 67181</p>
                 <div class="social-icons">
                     <a href="https://web.facebook.com/wahyu.brayzz/"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/wahyunorromadon/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/wahyukaizen/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/wahyunorromadon"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://www.twitter.com/wahyunorromadon"><i class="fa-brands fa-twitter"></i></a>
                     <a href="https://www.github.com/wahyunor"><i class="fa-brands fa-github"></i></a>
