--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div>
                 <i class="fa-solid fa-school"></i>
                 <h2>Mathematics Teacher Assistant</h2>
-                <p>internship in SMPW with activities : Assist math teachers in preparing learning materials and correcting assignments, Explaining the subject matter to students who have diculty understanding it, Provide guidance to students in working on math problems.</p>
+                <p>internship in SMPN 1 Grati with activities : Assist math teachers in preparing learning materials and correcting assignments, Explaining the subject matter to students who have diculty understanding it, Provide guidance to students in working on math problems.</p>
                 <a href="https://www.linkedin.com/in/wahyunorromadon">Learn more</a>
             </div>
             <div>
